Some spacing fixes

--- a/app/assets/stylesheets/_variables.sass
+++ b/app/assets/stylesheets/_variables.sass
@@ -5,7 +5,7 @@ $board-size: 496px
 $below-board-height: 140px
 
 // sidebar dimensions
-$main-width: 600px
+$main-width: 700px
 $right-sidebar-width: 300px
 
 // fonts
