--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -29,7 +29,7 @@ button
 .container 
   width: vars.$main-width
   margin: 0 auto
-  padding: 0 15px
+  // padding: 0 15px
 
 .invisible 
   opacity: 0
