--- a/app/assets/stylesheets/pages/homepage.sass
+++ b/app/assets/stylesheets/pages/homepage.sass
@@ -161,4 +161,4 @@
 
 @media (max-width: 980px)
   .homepage .game-modes-container
-    width: 600px
+    width: 700px
