--- a/app/javascript/game_modes/base.sass
+++ b/app/javascript/game_modes/base.sass
@@ -10,14 +10,14 @@
     flex-direction: column
     align-items: center
     min-height: 100vh
-    padding: 20px 0
-    padding-top: 30px
+    // padding: 20px 0
+    // padding-top: 30px
 
   // Above board section positioning
   .above-board
     width: $board-size
-    height: 50px
-    margin-bottom: 20px
+    height: 90px
+    // margin-bottom: 20px
     position: relative
     text-align: center
 
@@ -29,7 +29,7 @@
       text-align: center
       margin: 0 auto
       position: absolute
-      top: 15px
+      top: 35px
       transition: all 0.35s ease-out
 
       &.smaller
@@ -115,7 +115,7 @@
       text-align: center
       font-family: $combo-indicator-font
       position: absolute
-      top: 30px
+      top: 50px
       width: 100%
       transition: opacity 0.25s ease
 
